fix css mediaquery on ie fuck and allow media admin in wp backoffice

--- a/andam.fr/wp-content/themes/andam/style.less
+++ b/andam.fr/wp-content/themes/andam/style.less
@@ -634,15 +634,9 @@ color: #999;
 text-decoration: line-through;
 }
 
-/** iOS vertical **/
-@media 
-only screen and (min-width: 479px), 
-only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-}
-
 @media
-only screen and (max-device-width : 480px),
-only screen and (max-width: 480px) {
+only screen and (max-width: 640px) and (orientation: landscape),
+only screen and (max-width: 480px) and (orientation: portrait) {
 	#backstretch {
 	display:none;
 	}
